open in another tab

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <body>
     <p>Lorem ipsum dolor sit amet.</p>
 
-    <a href="#">MyWebProjects</a>
+    <a href="#" target="_blank">MyWebProjects</a>
   </body>
 </html>
