I forgot link element :D

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     , initial-scale=1.0"
     />
     <title>astro0mar</title>
+
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <div class="box">
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div>
 
     <a href="#" target="_blank">MyWebProjects</a>
   </body>
