adding some code to html file

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <h1>here i will put my projects as portfolio</h1>
     <div class="box">
       <p>Lorem ipsum dolor sit amet.</p>
     </div>
 
     <a href="#" target="_blank">MyWebProjects</a>
+    <a href="" target="_blank">project 1</a>
+    <button>test</button>
   </body>
 </html>
