--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <title>astro0mar</title>
 
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
   </head>
   <body>
+    <img src="pics/omar.jpg" alt="creator of this website photo" class="omar" />
     <h1>here i will put my projects as portfolio</h1>
     <div class="box">
       <p>Lorem ipsum dolor sit amet.</p>
     </div>
-
+    <input type="radio" name="" id="" />
     <a href="#" target="_blank">MyWebProjects</a>
     <a href="" target="_blank">project 1</a>
-    <button>test</button>
+    <button type="">ty test</button>
   </body>
 </html>
